# RL

./: .gitmodules  grpo_qwen3.5_4b_async_swe_smoke_arm_trtllm.yaml  mlperf_trtllm_bringup.md  pyproject.toml  pyrefly.toml  ray.sub  run_grpo_qwen35_4b_swe_smoke_trtllm.sh  run_trtllm_training_swe_30b.sh  trtllm_py_wrapper.sh
.agents/contributor-skills/build-and-dependency/: SKILL.md
.github/workflows/: _build_container.yml  cicd-main.yml
configs/: grpo_qwen3_1.7b.yaml  grpo_qwen3_1.7b_specdec.yaml  grpo_qwen3_1.7b_vllm.yaml
docker/: Dockerfile  Dockerfile.agentic.trtllm
docker/mlperf/: Dockerfile  Dockerfile.cudnn-fix
docs/: docker.md  nsys-profiling.md
docs/guides/: swe-rl-qwen3.md
examples/configs/: grpo_math_1B_trtllm.yaml
examples/configs/recipes/llm/: grpo-dapomath17k-nanov3-30BA3B-8n4g-megatron-trtllm.yaml  grpo-qwen2.5-0.5b-1n4g-megatron-trtllm-noncolocated-async.yaml  grpo-qwen2.5-0.5b-1n4g-megatron-trtllm.yaml  grpo-qwen3-1.7b-1n4g-megatron-trtllm-colocated.yaml  grpo-qwen3-1.7b-2n4g-fsdp2-trtllm.yaml  grpo-qwen3-1.7b-2n4g-megatron-trtllm.yaml  grpo-qwen3-8b-2n4g-megatron-trtllm-async-1off.yaml  grpo-qwen3-8b-2n4g-megatron-trtllm-colocated.yaml
examples/swe_bench/: REPRO_swe2.md  grpo_qwen3_30b_async_swe.yaml  grpo_qwen3_30b_async_swe_trtllm.yaml  run_grpo_repro_baseline_swe2.sh  run_grpo_swe2_scale_gen.sh
nemo_rl/algorithms/: grpo.py  grpo_sync.py  utils.py
nemo_rl/algorithms/async_utils/: trajectory_collector.py
nemo_rl/data/: llm_message_utils.py
nemo_rl/distributed/: ray_actor_environment_registry.py  stateless_process_group.py  virtual_cluster.py
nemo_rl/environments/: nemo_gym.py
nemo_rl/experience/: rollouts.py
nemo_rl/models/generation/: __init__.py  interfaces.py  openai_server_utils.py
nemo_rl/models/generation/trtllm/: __init__.py  _ifb_stats_patch.py  config.py  trtllm_backend.py  trtllm_generation.py  trtllm_http_server.py  trtllm_worker.py  trtllm_worker_async.py
nemo_rl/models/generation/vllm/: vllm_worker_async.py
nemo_rl/models/megatron/: setup.py
nemo_rl/models/policy/: lm_policy.py
nemo_rl/models/policy/workers/: megatron_policy_worker.py
nemo_rl/utils/: logger.py  mongodb_logger.py  packed_tensor.py  venvs.py
research/template_project/: pyproject.toml
tests/functional/: L1_Functional_Tests_Trtllm.sh  grpo_trtllm_fsdp2_colocated.sh  grpo_trtllm_mcore_colocated.sh  grpo_trtllm_mcore_non_colocated_async.sh
tests/test_suites/: nightly_gb200.txt  release_gb200.txt
tests/test_suites/llm/: grpo-dapomath17k-nanov3-30BA3B-8n4g-megatron-trtllm.sh  grpo-qwen2.5-0.5b-1n4g-megatron-trtllm-noncolocated-async.sh  grpo-qwen2.5-0.5b-1n4g-megatron-trtllm.sh  grpo-qwen3-1.7b-2n4g-fsdp2-trtllm.sh
tests/unit/: L0_Unit_Tests_Trtllm.sh  L0_Unit_Tests_Vllm_1.sh  L0_Unit_Tests_Vllm_2.sh  L0_Unit_Tests_Vllm_3.sh  conftest.py  excluded_unit_tests.sh
tests/unit/models/generation/: test_openai_server_utils.py  test_trtllm_http_server.py  test_vllm_generation.py
tests/unit/models/generation/trtllm/: test_trtllm_backend.py  test_trtllm_generation.py  test_trtllm_http_server.py  test_trtllm_worker_async.py
tools/: build-custom-trtllm.sh  build-editable-trtllm.sh
